--- a/src/paginas/admin.html
+++ b/src/paginas/admin.html
@@ -3,29 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rolling Clinic - Policonsultorios</title>
+    <title>Rolling Clinic - Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/css/carrousel.css">
-    <link rel="stylesheet" href="./src/css/styleSeccionProfesionales.css">
-    <link rel="stylesheet" href="./src/css/global.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <!-- Link Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <script
-      src="https://kit.fontawesome.com/3a0c1a8233.js"
-      crossorigin="anonymous"
-    ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="../css/tabla.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <script src="https://kit.fontawesome.com/3a0c1a8233.js"crossorigin="anonymous"></script>
 </head>
-<body class="container">
+<body class="body-container">
     <header>
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
                     <a class="navbar-brand" href="#">
-                        <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Clínica
                     </a>
                     <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
@@ -97,98 +88,47 @@
             </div>
         </nav>
     </header>
-    <main class="container">
-        <!-- --INICIO DE CARROUSEL -->
-        <section id="carousel-rolling" class="carousel slide rounded rounded-md overflow-hidden mb-2">
-            <article class="carousel-inner">
-                <figure class="carousel-item active">
-                    <img src="./src/img/carrusel1.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
-                </figure>
-                <figure class="carousel-item">
-                    <img src="./src/img/carrusel2.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
-                </figure>
-                <figure class="carousel-item">
-                    <img src="./src/img/carrusel3.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
-                </figure>
-            </article>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel-rolling" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel-rolling" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </section>
-        <!-- --FIN DE CARROUSEL -->
-        <section class="main-container">
-            <article class="seccion-servicios">
-                <h3>Nuestros Servicios</h3>
-            </article>
-            <article class="seccion-gestion d-flex flex-column text-center align-items-center justify-content-center">
-                <h3 class="">Auto Gestión</h3>
-                <section class="d-flex flex-column align-items-center justify-content-center gap-2 p-2 flex-sm-row">
-                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Gestiona tus Turnos</button>
-                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Mis Estudios</button>
-                </section>
-            </article>
-            <article class="seccion-profesionales">
-                <h3 class="text-center mb-4">Nuestros Profesionales</h3>
-                <div class="swiper">
-                  <div class="swiper-wrapper" id="sliderProfesionales">
-                  </div>
-                  <div class="swiper-pagination"></div>
-                  <div class="swiper-controls">
-                      <div class="swiper-button-prev"></div>
-                      <div class="swiper-button-next"></div>
-                  </div>
+    <main>
+        <figure>
+            <img src="../img/Foto4.png" class="img-fluid w-100 " alt="...">
+        </figure>
+        <div class="text-center contacto-style">
+            <div class="container-fluid">
+                <div class="encabezado">
+                    <h5>Consultas ingresadas</h5>
                 </div>
-            </article>
-            <article class="seccion-consulta">
-                <div class="text-center contacto-style">
-                    <div class="container-fluid">
-                        <div class="encabezado rounded rounded-sm">
-                            <h5>Envíanos tu consulta</h5>
-                        </div>
-                        <div class="row">
-                        <div class=" col-md-6 div-col2">
-                                <iframe src= "https://www.youtube.com/embed/YdixxxHMfD8?autoplay=1&loop=1&playlist=YdixxxHMfD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video img-fluid img-thumbnail p-0 mb-1 rounded border-0"></iframe>
-                        </div>
-                        <div class=" col-md-6 div-col1">
-                                <form class="formulario img-fluid img-thumbnail p-4 rounded d-flex flex-column gap-2 align-items-center justify-content-center border-0" id="form">
-                                    <div class="col-12">
-                                        <label for="validationCustom01" class="form-label">Nombre y apellido</label>
-                                        <input type="text" class="form-control border-1" id="nombre" maxlength="50" minlength="3" pattern="^[A-Za-z\s]+$" placeholder="Ej: María López">
-                                    </div>
-                                    <div class="col-12 ">
-                                        <label for="exampleFormControlInput1" class="form-label">Teléfono de contacto</label>
-                                        <input type="telefono" class="form-control border-1" id="telefono" minlength="6" maxlength="15" pattern="^[0-9]+$" placeholder="Ej: 381-1111111">
-                                    </div>
-                                    <div class="col-12">
-                                        <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
-                                        <input type="email" class="form-control border-1" id="mail" maxlength="30" minlength="15" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" placeholder="ejemplo@clínica.com">
-                                    </div>
-                                    <div class="col-12">
-                                        <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
-                                        <textarea class="form-control border-1" id="consulta" minlength="4" maxlength="300" rows="2"></textarea>
-                                    </div>
-                                    <div class="col-12 container-fluid text-center">
-                                        <button type="submit" class="btn btn-primario mt-3" id= btnEnviarConsulta onclick="guardarConsulta"row="2">Enviar consulta</button>
-                                    </div>
-                                </form> 
-                        </div>
+                <div class="row">
+                    <div class="text-center contacto-style">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="table">
+                                    <table class="table table-striped text-center" id="consultas">
+                                        <thead class="datosTabla">
+                                            <tr>
+                                                <th>Nombre</th>
+                                                <th>Teléfono</th>
+                                                <th>Mail</th>
+                                                <th>Consulta</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="tablaConsultasBody">
+                                            <!-- Contenido de la tabla -->
+                                        </tbody>
+                                    </table>
+                                    <a href="../../index.html" class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</a>                                
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </article>
-        </section>
+            </div>
+        </div>
     </main>
-    <!-- FOOTER -->
     <footer class="container">
         <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
             <div class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch" >
                 <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
-                <div class="m-3"><img src="./src/img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion" srcset=""> </div>
+                <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion" srcset=""> </div>
             </div>
             <div class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter"> 
                 <ul class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
@@ -211,13 +151,10 @@
         </article>
     </footer>
     <!-- SCRIPTS -->
-    <script src="./src/js/script.js"></script>
-    <script src="./src/js/formConsulta.js"></script>
-    <script src="./src/js/seccionProfesionales.js" type="module"></script>
-    <!-- Script bootstrap -->
+    <script src="../js/tablaCons.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/formConsulta.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <!-- Script Swiper -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
 </html>
