--- a/pageMedico.html
+++ b/pageMedico.html
@@ -17,28 +17,25 @@
     ></script>
   </head>
   <body>
-    <h1>Rolling Clinic - Policonsultorios</h1>
-
     <header>
-      <!-- bg-body-tertiary -->
       <nav class="navbar navbar-expand-md">
         <div class="container-fluid d-flex justify-content-between">
           <div
             class="navbar-logo col-md-4 d-flex justify-content-between col-12"
           >
-            <a class="navbar-brand text-light" href="#">
+            <a class="navbar-brand" href="#">
               <img
-                src="./src/iconos/health-icon.svg"
+                src="./img/health-icon.svg"
                 alt="Logo"
                 width="50"
                 height="40"
                 class="d-inline-block align-text-center"
               />
-              Rolling Consultorios
+              Rolling Clínica
             </a>
             <button
               class="navbar-toggler border border-2 border-light"
-              data-bs-theme="dark"
+              data-bs-theme="light"
               type="button"
               data-bs-target="#navbarNav"
               id="navbar-toggler"
@@ -70,14 +67,17 @@
             </ul>
             <div
               class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5"
-              id="btn-reg-log"
             >
-              <button class="btn btn-outline-info text-light">Registro</button>
-              <button class="btn btn-primary" id="btn-login">Login</button>
+              <button class="btn-secundario rounded rounded-sm p-1">
+                Registro
+              </button>
+              <button class="btn-primario btn-login rounded rounded-sm p-1">
+                Login
+              </button>
             </div>
-          </img>
+          </div>
           <!-- MENU POPOVER MOBILE -->
-          <div class="menu-nav text-light" id="menu-nav" popover role="menu">
+          <div class="menu-nav" id="menu-nav" popover role="menu">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
@@ -95,13 +95,17 @@
               </li>
             </ul>
             <div
-              class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0"
-              id="btn-reg-log"
+              class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0"
             >
-              <button class="btn btn-outline-info text-light">Registro</button>
-              <button class="btn btn-primary" id="btn-login">Login</button>
+              <button class="btn-secundario rounded rounded-sm p-1">
+                Registro
+              </button>
+              <button class="btn-primario rounded rounded-sm p-1 btn-login">
+                Login
+              </button>
             </div>
           </div>
+          <!-- FIN MENU MOBILE -->
           <!-- MODAL LOGIN -->
           <dialog id="modal-login">
             <form method="dialog" id="form-login">
@@ -112,9 +116,7 @@
                 aria-label="Close"
               ></button>
               <div class="input-group">
-                <span for="usuario" class="input-group-text fw-bold text-light"
-                  >Usuario</span
-                >
+                <span for="usuario" class="input-group-text">Usuario</span>
                 <input
                   type="text"
                   name="usuario"
@@ -124,9 +126,7 @@
                 />
               </div>
               <div class="input-group">
-                <span for="password" class="input-group-text fw-bold text-light"
-                  >Password</span
-                >
+                <span for="password" class="input-group-text">Password</span>
                 <input
                   type="password"
                   name="password"
@@ -135,95 +135,147 @@
                 />
               </div>
               <div class="login-buttons">
-                <button class="btn btn-primary" id="btn-login-ingresar">
+                <button
+                  class="btn-primario rounded rounded-sm p-1"
+                  id="btn-login-ingresar"
+                >
                   Ingresar
                 </button>
-                <button class="btn btn-outline-light" id="btn-login-cancelar">
+                <button
+                  class="btn-secundario rounded rounded-sm p-1"
+                  id="btn-login-cancelar"
+                >
                   Cancelar
                 </button>
               </div>
-              <p class="text-light">
+              <p class="">
                 Aun no tenes cuenta?
-                <a class="btn btn-outline-info" href="#">Registrarse</a>
+                <a class="btn-orange btn-sm rounded rounded-sm p-2" href="#"
+                  >Registrarse</a
+                >
               </p>
             </form>
           </dialog>
+          <!-- FIN MODAL LOGIN -->
         </div>
       </nav>
     </header>
-
     <main>
       <section class="container-fluid text-start p-4" id="banner">
         <div class="row justify-content-center align-items-center">
-          <div class="col-lg-2 col-md-4 d-flex justify-content-lg-end justify-content-center">
+          <div
+            class="col-lg-2 col-md-4 d-flex justify-content-lg-end justify-content-center"
+          >
             <img
-              src="https://picsum.photos/seed/picsum/200/300"
+              src="./img/coronavirus-sample-procedure-scaled.jpg"
               class="rounded-4"
               alt="imagen de un medico"
               srcset=""
             />
           </div>
           <div class="col-lg-10 col-md-8" id="textoBanner">
-            <h2><i class="fa-solid fa-stethoscope"></i> Bienvenido/a <span id="spanUser"></span></h2>
-            <h4>En este panel podras ver todos los turnos que tienes pendientes para esta semana. Tambien puedes editar y cancelar los turnos. </h4>
+            <h2>
+              <i class="fa-solid fa-stethoscope"></i> Bienvenido/a
+              <span id="spanUser"></span>
+            </h2>
+            <h4>
+              En este panel podras ver todos los turnos que tienes pendientes
+              para esta semana. Tambien puedes editar y cancelar los turnos.
+            </h4>
             <h5></h5>
           </div>
         </div>
       </section>
 
-      <section>
-        <h2>Turnos</h2>
-        <table class="table table-hover" >
-            <thead>
-                <tr>
-                  <th scope="col"><i class="fa-solid fa-user"></i></th>
-                  <th scope="col">Paciente</th>
-                  <th scope="col"><i class="fa-solid fa-clock"></i></th>
-                  <th scope="col">Control</th>
-                </tr>
-              </thead>
-              <tbody id="tablaTurnos" >
-               
-              </tbody>
+      <section class="m-lg-5">
+        <h2 class="text-center">Tus turnos</h2>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col"><i class="fa-solid fa-user"></i></th>
+              <th scope="col">Paciente</th>
+              <th scope="col"><i class="fa-solid fa-clock"></i></th>
+              <th scope="col">Control</th>
+            </tr>
+          </thead>
+          <tbody id="tablaTurnos"></tbody>
         </table>
       </section>
     </main>
 
-    <footer
-      class="container-fluid row d-flex justify-content-lg-around justify-content-md-around align-items-center w-100"
-    >
-      <div
-        class="col-lg-4 d-flex justify-content-around align-items-center"
-        style="max-width: 18rem"
+    <footer class="container">
+      <article
+        class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between"
       >
-        <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i></h3>
-        <div class="m-3">
-          <img src="./img/ministerioSalud.jpg" alt="" srcset="" />
+        <div
+          class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch"
+        >
+          <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i></h3>
+          <div class="m-3">
+            <img
+              src="./img/ministerioSalud.jpg"
+              alt="logo ministerio de salud de la nacion"
+              srcset=""
+            />
+          </div>
         </div>
-      </div>
-      <div class="col-lg-4 d-flex row m-2" style="max-width: 18rem">
-        <a href="#" target="_blank">Mis turnos</a>
-        <a href="#" target="_blank">Contacto</a>
-        <a href="#" target="_blank">Politicas de Privacidad</a>
-        <a href="#" target="_blank">Ministerio de salud</a>
-      </div>
-      <div
-        class="col-lg-4 d-flex justify-content-center mb-3"
-        style="max-width: 18rem"
-      >
-        <div class="column">
-          <h4>Nuestras redes sociales</h4>
-          <a href="#" target="_blank"
-            ><i class="fa-brands fa-x-twitter fa-lg m-2"></i
-          ></a>
-          <a href="#" target="_blank"
-            ><i class="fa-brands fa-facebook fa-lg m-2"></i
-          ></a>
-          <a href="#" target="_blank"
-            ><i class="fa-brands fa-instagram fa-lg m-2"></i
-          ></a>
+        <div
+          class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter"
+        >
+          <ul
+            class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start"
+          >
+            <li class="list-group-item w-100">
+              <a class="footer-links" href="#" target="_blank">Mis turnos</a>
+            </li>
+            <li class="list-group-item w-100">
+              <a class="footer-links" href="#" target="_blank">Contacto</a>
+            </li>
+            <li class="list-group-item w-100">
+              <a class="footer-links" href="#" target="_blank"
+                >Politicas de Privacidad</a
+              >
+            </li>
+            <li class="list-group-item w-100">
+              <a class="footer-links" href="#" target="_blank"
+                >Ministerio de salud</a
+              >
+            </li>
+          </ul>
         </div>
-      </div>
+        <div
+          class="col-lg-4 d-flex col-12 col-sm-6 justify-content-center align-items-stretch bordesFooter p-3"
+        >
+          <div
+            class="container d-flex justify-content-between flex-column align-items-center"
+            id="redesSocialesFooter"
+          >
+            <p class="row">Nuestras redes sociales</p>
+            <div
+              class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2"
+            >
+              <a
+                class="d-flex justify-content-start align-items-center ps-2 gap-2"
+                href="#"
+                target="_blank"
+                ><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a
+              >
+              <a
+                class="d-flex justify-content-start align-items-center ps-2 gap-2"
+                href="#"
+                target="_blank"
+                ><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a
+              >
+              <a
+                class="d-flex justify-content-start align-items-center ps-2 gap-2"
+                href="#"
+                target="_blank"
+                ><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a
+              >
+            </div>
+          </div>
+        </div>
+      </article>
     </footer>
 
     <script
@@ -231,7 +283,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./src/js/scriptNuevo.js"></script>
+    <script type="module" src="./src/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
