--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Rolling Clinic - Policonsultorios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/css/carrousel.css">
-    <link rel="stylesheet" href="./src/css/styleSeccionProfesionales.css">
+    <link rel="stylesheet" href="./src/css/seccionProfesionales.css">
+    <link rel="stylesheet" href="./src/css/seccionServicios.css">
     <link rel="stylesheet" href="./src/css/global.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Link Google Fonts -->
@@ -122,18 +123,30 @@
         </section>
         <!-- --FIN DE CARROUSEL -->
         <section class="main-container">
+            <!-- SERVICIOS -->
             <article class="seccion-servicios">
-                <h3>Nuestros Servicios</h3>
+                <h3 class="text-center mb-5">Nuestros Servicios</h3>
+                    <div class="swiper">
+                        <div class="swiper-wrapper" id="sliderServicios">
+                        </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-controls">
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
+                        </div>
+                    </div>
             </article>
+            <!-- AUTOGESTION -->
             <article class="seccion-gestion d-flex flex-column text-center align-items-center justify-content-center">
-                <h3 class="">Auto Gestión</h3>
-                <section class="d-flex flex-column align-items-center justify-content-center gap-2 p-2 flex-sm-row">
+                <h3 class="text-center mb-5">Auto Gestión</h3>
+                <section class="d-flex flex-column align-items-center justify-content-center gap-2 p-2 flex-sm-row gap-md-5">
                     <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Gestiona tus Turnos</button>
                     <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Mis Estudios</button>
                 </section>
             </article>
+            <!-- PROFESIONALES -->
             <article class="seccion-profesionales">
-                <h3 class="text-center mb-4">Nuestros Profesionales</h3>
+                <h3 class="text-center mb-5">Nuestros Profesionales</h3>
                 <div class="swiper">
                   <div class="swiper-wrapper" id="sliderProfesionales">
                   </div>
@@ -144,6 +157,7 @@
                   </div>
                 </div>
             </article>
+            <!-- CONSULTAS -->
             <article class="seccion-consulta">
                 <div class="text-center contacto-style">
                     <div class="container-fluid">
@@ -188,7 +202,7 @@
         <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
             <div class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch" >
                 <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
-                <div class="m-3"><img src="./src/img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion" srcset=""> </div>
+                <div class="m-3"><img src="./src/img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion"> </div>
             </div>
             <div class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter"> 
                 <ul class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
@@ -214,6 +228,7 @@
     <script src="./src/js/script.js"></script>
     <script src="./src/js/formConsulta.js"></script>
     <script src="./src/js/seccionProfesionales.js" type="module"></script>
+    <script src="./src/js/scriptServicios.js" type="module"></script>
     <!-- Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- Script Swiper -->
